--- a/Main.html
+++ b/Main.html
@@ -33,4 +33,5 @@
           <img class="image-responsive background"src="./assets/images/main.george.png" alt="Welcome to the Mothership">
       </div>
 </body>
+<script src="./assets/javascripts/mobile.menu.js"></script>
 </html>
