--- a/Media.html
+++ b/Media.html
@@ -39,7 +39,7 @@
       <h1 class="section-title">Photos</h1>
       <div class="media-list">
         <div class="media-card-wrapper">
-          <a class="media-card" href="./assets/images/Media.George.jpg" data-lightbox="ford-motor">
+          <a class="media-card" href="./assets/images/Media.George.jpg" data-lightbox="p-funk">
               <h3>George Clinton</h3>
             <img src="./assets/images/Media.George.jpg" />
           </a>
