--- a/Media.html
+++ b/Media.html
@@ -39,49 +39,49 @@
       <h1 class="section-title">Photos</h1>
       <div class="media-list">
         <div class="media-card-wrapper">
-          <a class="media-card" href="./assets/images/Media.George.jpg" data-lightbox="p-funk">
+          <a class="media-card" href="./assets/images/Media.George.jpg" data-lightbox>
               <h3>George Clinton</h3>
             <img src="./assets/images/Media.George.jpg" />
           </a>
         </div>
         <div class="media-card-wrapper">
-          <a class="media-card" href="./assets/images/media.bootsy.jpg" data-lightbox="ford-motor">
+          <a class="media-card" href="./assets/images/media.bootsy.jpg" data-lightbox>
               <h3>Bootsy Collins</h3>
             <img src="./assets/images/media.bootsy.jpg" />
           </a>
         </div>
         <div class="media-card-wrapper">
-          <a class="media-card" href="./assets/images/media.bernie.jpg" data-lightbox="ford-motor">
+          <a class="media-card" href="./assets/images/media.bernie.jpg" data-lightbox>
             <h3>Bernie Worrell</h3>
             <img src="./assets/images/media.bernie.jpg" />
           </a>
         </div>
         <div class="media-card-wrapper">
-          <a class="media-card" href="./assets/images/media.eddie.jpg" data-lightbox="ford-motor">
+          <a class="media-card" href="./assets/images/media.eddie.jpg" data-lightbox>
               <h3>Eddie Hazel</h3>
             <img src="./assets/images/media.eddie.jpg" />
           </a>
         </div>
         <div class="media-card-wrapper">
-          <a class="media-card" href="./assets/images/media.mothership-landing.jpg" data-lightbox="ford-motor">
+          <a class="media-card" href="./assets/images/media.mothership-landing.jpg" data-lightbox>
             <h3>Star Child</h3>
             <img src="./assets/images/media.mothership-landing.jpg" />
           </a>
         </div>
         <div class="media-card-wrapper">
-          <a class="media-card" href="./assets/images/media.fred.jpg" data-lightbox="ford-motor">
+          <a class="media-card" href="./assets/images/media.fred.jpg" data-lightbox>
             <h3>Fred Wesley</h3>
             <img src="./assets/images/media.fred.jpg" />
           </a>
         </div>
         <div class="media-card-wrapper">
-          <a class="media-card" href="./assets/images/media.brides.jpg" data-lightbox="ford-motor">
+          <a class="media-card" href="./assets/images/media.brides.jpg" data-lightbox>
             <h3>The Brides of Funkenstein</h3>
             <img src="./assets/images/media.brides.jpg" />
           </a>
         </div>
         <div class="media-card-wrapper">
-          <a class="media-card" href="./assets/images/media.nose.jpg" data-lightbox="ford-motor">
+          <a class="media-card" href="./assets/images/media.nose.jpg" data-lightbox>
             <h3>Sir Nose D'Voidoffunk</h3>
             <img src="./assets/images/media.nose.jpg" />
           </a>
