--- a/Discography.html
+++ b/Discography.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>George Clinton - Discography</title>
   <link href="https://fonts.googleapis.com/css?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="./assets/stylesheets/flexboxgrid.css" />
   <link rel="stylesheet" type="text/css" href="./assets/stylesheets/styles.css" />
 </head>
 <body class="homepage">
@@ -22,7 +23,7 @@
             <div></div>
           </div>
         </div>
-        <nav id="MainMenu" class="col-xs-12 col-sm-4">"
+        <nav id="MainMenu" class="col-xs-12 col-sm-4">
           <a href="about.html">About</a>
           <a href="discography.html">Discography</a>
           <a href="media.html">Media</a>
@@ -257,9 +258,8 @@
         </ol>
       </ul>
     </div>
-
-
-
 </body>
-
+<script src="./assets/javascripts/jquery.min.js"></script>
+<script src="./assets/javascripts/lodash.js"></script>
+<script src="./assets/javascripts/mobile.menu.js"></script>
 </html>
