--- a/Media.html
+++ b/Media.html
@@ -9,6 +9,8 @@
   <title>George Clinton - Discography</title>
   <link href="https://fonts.googleapis.com/css?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./assets/stylesheets/styles.css" />
+  <link rel="stylesheet" type="text/css" href="./assets/stylesheets/flexboxgrid.css" />
+  <link rel="stylesheet" type="text/css" href="./assets/stylesheets/lightbox.min.css" />
 </head>
 <body class="homepage">
   <div class="header">
@@ -22,7 +24,7 @@
             <div></div>
           </div>
         </div>
-        <nav id="MainMenu" class="col-xs-12 col-sm-4">"
+        <nav id="MainMenu" class="col-xs-12 col-sm-4">
           <a href="about.html">About</a>
           <a href="discography.html">Discography</a>
           <a href="media.html">Media</a>
@@ -39,49 +41,49 @@
       <h1 class="section-title">Photos</h1>
       <div class="media-list">
         <div class="media-card-wrapper">
-          <a class="media-card" href="./assets/images/Media.George.jpg" data-lightbox>
+          <a class="media-card" href="./assets/images/Media.George.jpg" data-lightbox="Funk">
               <h3>George Clinton</h3>
             <img src="./assets/images/Media.George.jpg" />
           </a>
         </div>
         <div class="media-card-wrapper">
-          <a class="media-card" href="./assets/images/media.bootsy.jpg" data-lightbox>
+          <a class="media-card" href="./assets/images/media.bootsy.jpg" data-lightbox="Funk">
               <h3>Bootsy Collins</h3>
             <img src="./assets/images/media.bootsy.jpg" />
           </a>
         </div>
         <div class="media-card-wrapper">
-          <a class="media-card" href="./assets/images/media.bernie.jpg" data-lightbox>
-            <h3>Bernie Worrell</h3>
-            <img src="./assets/images/media.bernie.jpg" />
-          </a>
-        </div>
-        <div class="media-card-wrapper">
-          <a class="media-card" href="./assets/images/media.eddie.jpg" data-lightbox>
+          <a class="media-card" href="./assets/images/media.eddie.jpg" data-lightbox="Funk">
               <h3>Eddie Hazel</h3>
             <img src="./assets/images/media.eddie.jpg" />
           </a>
         </div>
         <div class="media-card-wrapper">
-          <a class="media-card" href="./assets/images/media.mothership-landing.jpg" data-lightbox>
+          <a class="media-card" href="./assets/images/media.bernie.jpg" data-lightbox="Funk">
+            <h3>Bernie Worrell</h3>
+            <img src="./assets/images/media.bernie.jpg" />
+          </a>
+        </div>
+        <div class="media-card-wrapper">
+          <a class="media-card" href="./assets/images/media.mothership-landing.jpg" data-lightbox="Funk">
             <h3>Star Child</h3>
             <img src="./assets/images/media.mothership-landing.jpg" />
           </a>
         </div>
         <div class="media-card-wrapper">
-          <a class="media-card" href="./assets/images/media.fred.jpg" data-lightbox>
+          <a class="media-card" href="./assets/images/media.fred.jpg" data-lightbox="Funk">
             <h3>Fred Wesley</h3>
             <img src="./assets/images/media.fred.jpg" />
           </a>
         </div>
         <div class="media-card-wrapper">
-          <a class="media-card" href="./assets/images/media.brides.jpg" data-lightbox>
+          <a class="media-card" href="./assets/images/media.brides.jpg" data-lightbox="Funk">
             <h3>The Brides of Funkenstein</h3>
             <img src="./assets/images/media.brides.jpg" />
           </a>
         </div>
         <div class="media-card-wrapper">
-          <a class="media-card" href="./assets/images/media.nose.jpg" data-lightbox>
+          <a class="media-card" href="./assets/images/media.nose.jpg" data-lightbox="Funk">
             <h3>Sir Nose D'Voidoffunk</h3>
             <img src="./assets/images/media.nose.jpg" />
           </a>
@@ -98,7 +100,7 @@
   </main>
 </body>
 <script src="./assets/javascripts/jquery-3.3.1.min.js"></script>
-<script src="./assets/javascripts/lightbox.js"></script>
+<script src="./assets/javascripts/lightbox.min.js"></script>
 <script src="./assets/javascripts/lodash.js"></script>
-<script src="./assets/javascripts/mobile-menu.js"></script>
+<script src="./assets/javascripts/mobile.menu.js"></script>
 </html>
