--- a/About.html
+++ b/About.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>George Clinton - About</title>
   <link href="https://fonts.googleapis.com/css?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="./assets/stylesheets/flexboxgrid.css" />
   <link rel="stylesheet" type="text/css" href="./assets/stylesheets/styles.css" />
 </head>
 <body class="homepage">
@@ -22,7 +23,7 @@
             <div></div>
           </div>
         </div>
-        <nav id="MainMenu" class="col-xs-12 col-sm-4">"
+        <nav id="MainMenu" class="col-xs-12 col-sm-4">
           <a href="about.html">About</a>
           <a href="discography.html">Discography</a>
           <a href="media.html">Media</a>
@@ -85,7 +86,7 @@
 <div class="col-xs-12">
   <h1 class="section-title">Give The People What They Want!</h1>
 </div>
-<div class="col-xs-12 col-md-12">
+<div class="col-xs-12 col-md-6">
   <h3>P - Funk Affiliate Bands</h3>
   <ul>
     <li>
@@ -110,11 +111,14 @@
       Brides of Funkenstein
     </li>
     <li>
+      Parlet
+    </li>
+    <li>
       P-Funk All-Stars
     </li>
   </ul>
 </div>
-<div class="col-xs-12 col-md-12">
+<div class="col-xs-12 col-md-6">
   <h3>Musical Characteristics</h3>
   <ul>
     <li>
@@ -151,4 +155,7 @@
 </section>
 </main>
 </body>
+<script src="./assets/javascripts/jquery.min.js"></script>
+<script src="./assets/javascripts/lodash.js"></script>
+<script src="./assets/javascripts/mobile.menu.js"></script>
 </html>
