--- a/Main.html
+++ b/Main.html
@@ -8,8 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>George Clinton</title>
   <link href="https://fonts.googleapis.com/css?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="./assets/stylesheets/styles.css" />
   <link rel="stylesheet" type="text/css" href="./assets/stylesheets/flexboxgrid.css" />
+  <link rel="stylesheet" type="text/css" href="./assets/stylesheets/styles.css" />
 </head>
 <body class="homepage">
   <div class="header">
@@ -23,7 +23,7 @@
             <div></div>
           </div>
         </div>
-        <nav id="MainMenu" class="col-xs-12 col-sm-4">"
+        <nav id="MainMenu" class="col-xs-12 col-sm-4">
           <a href="about.html">About</a>
           <a href="discography.html">Discography</a>
           <a href="media.html">Media</a>
@@ -33,5 +33,7 @@
           <img class="image-responsive background"src="./assets/images/main.george.png" alt="Welcome to the Mothership">
       </div>
 </body>
+<script src="./assets/javascripts/jquery.min.js"></script>
+<script src="./assets/javascripts/lodash.js"></script>
 <script src="./assets/javascripts/mobile.menu.js"></script>
 </html>
