--- a/Discography.html
+++ b/Discography.html
@@ -25,7 +25,7 @@
         </div>
         <nav id="MainMenu" class="col-xs-12 col-sm-4">
           <a href="about.html">About</a>
-          <a href="discography.html">Discography</a>
+          <a href="discography.html" class="active">Discography</a>
           <a href="media.html">Media</a>
           <a href="merch.html">Merch</a>
           <a href="tour.html">Tour</a>
