--- a/About.html
+++ b/About.html
@@ -24,7 +24,7 @@
           </div>
         </div>
         <nav id="MainMenu" class="col-xs-12 col-sm-4">
-          <a href="about.html">About</a>
+          <a href="about.html" class="active">About</a>
           <a href="discography.html">Discography</a>
           <a href="media.html">Media</a>
           <a href="merch.html">Merch</a>
