--- a/Media.html
+++ b/Media.html
@@ -6,11 +6,10 @@
   <meta name="keywords" content="HTML,CSS,JavaScript,jQuery">
   <meta name="author" content="Steffan Sanguinetti">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>George Clinton - Discography</title>
+  <title>George Clinton - Media</title>
   <link href="https://fonts.googleapis.com/css?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="./assets/stylesheets/styles.css" />
   <link rel="stylesheet" type="text/css" href="./assets/stylesheets/flexboxgrid.css" />
-  <link rel="stylesheet" type="text/css" href="./assets/stylesheets/lightbox.min.css" />
+  <link rel="stylesheet" type="text/css" href="./assets/stylesheets/styles.css" />
 </head>
 <body class="homepage">
   <div class="header">
@@ -27,7 +26,7 @@
         <nav id="MainMenu" class="col-xs-12 col-sm-4">
           <a href="about.html">About</a>
           <a href="discography.html">Discography</a>
-          <a href="media.html">Media</a>
+          <a href="media.html" class="active">Media</a>
           <a href="merch.html">Merch</a>
           <a href="tour.html">Tour</a>
         </nav>
