--- a/Media.html
+++ b/Media.html
@@ -98,7 +98,7 @@
     </div>
   </main>
 </body>
-<script src="./assets/javascripts/jquery-3.3.1.min.js"></script>
+<script src="./assets/javascripts/jquery.min.js"></script>
 <script src="./assets/javascripts/lightbox.min.js"></script>
 <script src="./assets/javascripts/lodash.js"></script>
 <script src="./assets/javascripts/mobile.menu.js"></script>
