--- a/Media.html
+++ b/Media.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>George Clinton - Media</title>
   <link href="https://fonts.googleapis.com/css?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="./assets/stylesheets/lightbox.min.css" />
   <link rel="stylesheet" type="text/css" href="./assets/stylesheets/flexboxgrid.css" />
   <link rel="stylesheet" type="text/css" href="./assets/stylesheets/styles.css" />
 </head>
@@ -40,49 +41,49 @@
       <h1 class="section-title">Photos</h1>
       <div class="media-list">
         <div class="media-card-wrapper">
-          <a class="media-card" href="./assets/images/Media.George.jpg" data-lightbox="Funk">
+          <a class="media-card" href="./assets/images/Media.George.jpg">
               <h3>George Clinton</h3>
             <img src="./assets/images/Media.George.jpg" />
           </a>
         </div>
         <div class="media-card-wrapper">
-          <a class="media-card" href="./assets/images/media.bootsy.jpg" data-lightbox="Funk">
+          <a class="media-card" href="./assets/images/media.bootsy.jpg">
               <h3>Bootsy Collins</h3>
             <img src="./assets/images/media.bootsy.jpg" />
           </a>
         </div>
         <div class="media-card-wrapper">
-          <a class="media-card" href="./assets/images/media.eddie.jpg" data-lightbox="Funk">
+          <a class="media-card" href="./assets/images/media.eddie.jpg">
               <h3>Eddie Hazel</h3>
             <img src="./assets/images/media.eddie.jpg" />
           </a>
         </div>
         <div class="media-card-wrapper">
-          <a class="media-card" href="./assets/images/media.bernie.jpg" data-lightbox="Funk">
+          <a class="media-card" href="./assets/images/media.bernie.jpg">
             <h3>Bernie Worrell</h3>
             <img src="./assets/images/media.bernie.jpg" />
           </a>
         </div>
         <div class="media-card-wrapper">
-          <a class="media-card" href="./assets/images/media.mothership-landing.jpg" data-lightbox="Funk">
+          <a class="media-card" href="./assets/images/media.mothership-landing.jpg">
             <h3>Star Child</h3>
             <img src="./assets/images/media.mothership-landing.jpg" />
           </a>
         </div>
         <div class="media-card-wrapper">
-          <a class="media-card" href="./assets/images/media.fred.jpg" data-lightbox="Funk">
+          <a class="media-card" href="./assets/images/media.fred.jpg">
             <h3>Fred Wesley</h3>
             <img src="./assets/images/media.fred.jpg" />
           </a>
         </div>
         <div class="media-card-wrapper">
-          <a class="media-card" href="./assets/images/media.brides.jpg" data-lightbox="Funk">
+          <a class="media-card" href="./assets/images/media.brides.jpg">
             <h3>The Brides of Funkenstein</h3>
             <img src="./assets/images/media.brides.jpg" />
           </a>
         </div>
         <div class="media-card-wrapper">
-          <a class="media-card" href="./assets/images/media.nose.jpg" data-lightbox="Funk">
+          <a class="media-card" href="./assets/images/media.nose.jpg" data-lightbox="P-funk">
             <h3>Sir Nose D'Voidoffunk</h3>
             <img src="./assets/images/media.nose.jpg" />
           </a>
