--- a/Discography.html
+++ b/Discography.html
@@ -258,6 +258,7 @@
         </ol>
       </ul>
     </div>
+  </main>  
 </body>
 <script src="./assets/javascripts/jquery.min.js"></script>
 <script src="./assets/javascripts/lodash.js"></script>
