--- a/Media.html
+++ b/Media.html
@@ -17,7 +17,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12 col-sm-4">
-          <a href="main.html"><img class="logo" src="./assets/images/Logo - main menu.png" alt="George Clinton" /></a>
+          <a href="index.html"><img class="logo" src="./assets/images/Logo - main menu.png" alt="George Clinton" /></a>
           <div id="MenuIcon" class="mobile-menu-icon">
             <div></div>
             <div></div>
