--- a/Discography.html
+++ b/Discography.html
@@ -16,7 +16,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12 col-sm-4">
-          <a href="main.html"><img class="logo" src="./assets/images/Logo - main menu.png" alt="George Clinton" /></a>
+          <a href="index.html"><img class="logo" src="./assets/images/Logo - main menu.png" alt="George Clinton" /></a>
           <div id="MenuIcon" class="mobile-menu-icon">
             <div></div>
             <div></div>
@@ -258,7 +258,7 @@
         </ol>
       </ul>
     </div>
-  </main>  
+  </main>
 </body>
 <script src="./assets/javascripts/jquery.min.js"></script>
 <script src="./assets/javascripts/lodash.js"></script>
